Fixed weird youtube scrollbar. Fixed FFMPEG not detecting voe properly

--- a/css/style.sass
+++ b/css/style.sass
@@ -9,3 +9,6 @@ div.modal-header>h4.modal-title
 body>div#a-page //Amazon
 	img
 		mix-blend-mode: unset !important
+		
+ytd-app //Youtube
+	overflow-x: hidden !important
